pulling from master after editing about.html

--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=Raleway:200' rel='stylesheet' type='text/css'>
     <title>About &#124; Stardom Foundation</title>
+    <link rel="shortcut icon" href="img/how.png" type="image/png">
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" type="text/css" href="css/about.css">
@@ -14,16 +15,8 @@
     <link rel="stylesheet" href="./css/font-awesome.min.css">
 </head>
 
-<style>
-    .mySlides {
-        display: none;
-    }
-
-</style>
-
 <body>
 
-    <!--    *******************************  -->
     <!--    Beginning Of Nav Bar-->
     <section>
         <nav class="desk_nav top-navigation">
@@ -51,7 +44,6 @@
         </div>
         <span class="mobile_nav" style="font-size:30px;cursor:pointer;position:fixed;" onclick="openNav()">☰ </span>
 
-        <!--        *****************************************-->
         <!--        MODAL TO BE OPENED ON CLICKING CONTACT-->
         <div class=" reveal" id="exampleModal1" data-reveal>
             <button class="close-button" data-close aria-label="Close modal" type="button">
