--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home &#124; Stardom</title>
+    <link rel="shortcut icon" href="img/how.png" type="image/png">
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
@@ -14,9 +15,6 @@
 </head>
 
 <body>
-
-
-    <!--    *******************************  -->
     <!--    Beginning Of Nav Bar-->
     <section>
         <nav class="desk_nav top-navigation">
@@ -44,7 +42,6 @@
         </div>
         <span class="mobile_nav" style="font-size:30px;cursor:pointer;position:fixed;" onclick="openNav()">☰ </span>
 
-        <!--        *****************************************-->
         <!--        MODAL TO BE OPENED ON CLICKING CONTACT-->
         <div class=" reveal" id="exampleModal1" data-reveal>
             <button class="close-button" data-close aria-label="Close modal" type="button">
@@ -129,17 +126,16 @@
         <h5 style="font-size:2em;">UPCOMING EVENTS</h5>
         <div class="row cards-home">
             <div class="small-12 medium-4 large-4 columns">
-                <div class="card-small">
+                <div class="card-small-big">
                     <div class=" small-centered large-centered columns ">
                         <div class="row">
                             <div class=" columns">
                                 <div class="card-small">
-                                    <div class="image img_1">
-                                        <!--                                <img src="./img/hero.jpg">-->
-                                        <span class="title">Road Warrior</span>
+                                    <div class="image img_22">
+                                        <span class="card-header">Jibebe Highschool Outreach</span>
                                     </div>
                                     <div class="content">
-                                        <div class="small-10 medium-11 large-11 column event_date event_txt">
+                                        <div class="small-10 medium-11 large-11 column card-event-date card-event-text">
                                             <p>I shall be telling this with a sigh . Somewhere ages and ages hence: Two roads diverged in a wood, and I</p>
                                         </div>
                                     </div>
@@ -156,17 +152,16 @@
                 </div>
             </div>
             <div class="small-12 medium-4 large-4 columns">
-                <div class="card-small">
+                <div class="card-small-big">
                     <div class=" small-centered large-centered columns ">
                         <div class="row">
                             <div class=" columns">
                                 <div class="card-small">
-                                    <div class="image img_1">
-                                        <!--                                <img src="./img/hero.jpg">-->
-                                        <span class="title">Road Warrior</span>
+                                    <div class="image img_22">
+                                        <span class="card-header">Young Girls Camp Kawangware</span>
                                     </div>
                                     <div class="content">
-                                        <div class="small-10 medium-11 large-11 column event_date event_txt">
+                                        <div class="small-10 medium-11 large-11 column card-event-date card-event-text">
                                             <p>I shall be telling this with a sigh . Somewhere ages and ages hence: Two roads diverged in a wood, and I</p>
                                         </div>
                                     </div>
@@ -183,17 +178,16 @@
                 </div>
             </div>
             <div class="small-12 medium-4 large-4 columns">
-                <div class="card-small">
+                <div class="card-small-big">
                     <div class=" small-centered large-centered columns ">
                         <div class="row">
                             <div class=" columns">
                                 <div class="card-small">
-                                    <div class="image img_1">
-                                        <!--                                <img src="./img/hero.jpg">-->
-                                        <span class="title">Road Warrior</span>
+                                    <div class="image img_22">
+                                        <span class="card-header">Riara River School</span>
                                     </div>
                                     <div class="content">
-                                        <div class="small-10 medium-11 large-11 column event_date event_txt">
+                                        <div class="small-10 medium-11 large-11 column card-event-date card-event-text">
                                             <p>I shall be telling this with a sigh . Somewhere ages and ages hence: Two roads diverged in a wood, and I</p>
                                         </div>
                                     </div>
