--- a/programs.html
+++ b/programs.html
@@ -5,113 +5,48 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="img/how.png" type="image/png">
     <title>Programs &#124; Stardom</title>
-    <!--<link rel="shortcut icon" href="img/logo.png" type="image/png">-->
-    <link href='https://fonts.googleapis.com/css?family=Raleway:200' rel='stylesheet' type='text/css'>
+
 
     <link rel="stylesheet" href="css/foundation.css" />
     <link rel="stylesheet" href="css/ionicons.css" />
-    <link rel="stylesheet" href="css/app.css" />
-    <link rel="stylesheet" href="css/nav_mobile.css" />
+    <link rel="stylesheet" href="css/nav_mobile.css">
+    <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="./css/font-awesome.min.css">
     <link rel="stylesheet" href="programs.css" />
+
 
 </head>
 
 <body>
 
-    <!--    *******************************  -->
-    <!--    Beginning Of Nav Bar-->
-    <section>
-        <nav class="desk_nav top-navigation">
-            <ul>
-                <li>
-                    <a href="#home"><img src="./img/pngone.png"></a>
-                </li>
-                <li style="float:right; padding-top:20px;"><a data-open="exampleModal1" class="active" href="#about">CONTACT</a></li>
-                <li style="float:right; margin-right:100px; padding-top:20px;"><a href="./programs.html">SUPPORT</a></li>
-                <li style="float:right; padding-right:20px; padding-top:20px;"><a href="./events.html">EVENTS</a></li>
-                <li style="float:right; padding-right:20px; padding-top:20px;"><a href="./about.html">ABOUT</a></li>
-                <li style="float:right; padding-right:20px; padding-top:20px;"><a href="index.html">HOME</a></li>
-            </ul>
-        </nav>
 
-        <div id="myNav" class="overlay">
-            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-            <div class="overlay-content">
-                <a href="index.html">HOME</a>
-                <a href="./about.html">ABOUT</a>
-                <a href="./events.html">EVENTS</a>
-                <a href="./programs.html">SUPPORT</a>
-                <a data-open="exampleModal1" href="#abot">CONTACT</a>
-            </div>
-        </div>
-        <span class="mobile_nav" style="font-size:30px;cursor:pointer;position:fixed;" onclick="openNav()">☰ </span>
+<nav class="desk_nav top-navigation">
+    <ul>
+        <li>
+            <a href="#home"><img src="./img/pngone.png"></a>
+        </li>
+        <li style="float:right; padding-top:20px;"><a data-open="exampleModal1" class="active" href="#about">CONTACT</a></li>
+        <li style="float:right; margin-right:100px; padding-top:20px;"><a href="./programs.html">SUPPORT</a></li>
+        <li style="float:right; padding-right:20px; padding-top:20px;"><a href="./events.html">EVENTS</a></li>
+        <li style="float:right; padding-right:20px; padding-top:20px;"><a href="./about.html">ABOUT</a></li>
+        <li style="float:right; padding-right:20px; padding-top:20px;"><a href="#hero">HOME</a></li>
+    </ul>
+</nav>
 
-        <!--        *****************************************-->
-        <!--        MODAL TO BE OPENED ON CLICKING CONTACT-->
-        <div class=" reveal" id="exampleModal1" data-reveal>
-            <button class="close-button" data-close aria-label="Close modal" type="button">
-                <span aria-hidden="true">&times;</span>
-            </button>
-            <h1>Location&#40;s&#41;&#58;</h1>
-            <!--            KENYA-->
-            <h3>Kenya<span><p style="font-size: 20px;">&#40;Headquarters&#41;</p></span></h3>
-            <p>Stardom,
-                <br>Street 43,
-                <br> Lane 7,
-                <br> Block 23 Ngong Road,
-                <br> +254&#40;0&#41;701257903
-                <br> Nairobi, Kenya</p>
+    <!--<div class="column row wrapper heading">-->
+        <!--<p>-->
+            <!--Stardom-Foundation has three core programs:-->
 
+            <!--<ul>-->
+                <!--<li>Ferox deuss ducunt ad contencio.</li>-->
+                <!--<li>Cauliflower combines greatly with old tuna.</li>-->
+                <!--<li>Why does the starship warp.</li>-->
+            <!--</ul>-->
 
-            <!--            ZAMBIA-->
-            <h3>Zambia</h3>
-            <p>Stardom Foundation Office,
-                <br> Plot 34872A,
-                <br> Great N,
-                <br> +260&#40;0&#41;950798687
-                <br> Lusaka, Zambia</p>
-
-
-            <!--            UGANDA-->
-            <h3>Uganda</h3>
-            <p>Stardom Organisation,
-                <br> c/o AVSI,
-                <br> Plot 1119 Ggaba Road,
-                <br> +256&#40;0&#41;772778813
-                <br> Kyenjojo, Uganda</p>
-
-
-            <!--            NIGERIA-->
-            <h3>Nigeria</h3>
-
-            <p>Stardom Office,
-                <br>Number 3,
-                <br>Aliyu Abubakar Road,
-                <br> Anwan Rimi,
-                <br> +234&#40;0&#41;8031439750
-                <br> Kaduna, Nigeria</p>
-        </div>
-        <!--        END OF MODAL-->
-    </section>
-    <!--    End of Nav Bar-->
-
-
-
-    <div class="column row wrapper">
-
-        <h1>
-    Stardom-Foundation | Programs
-</h1>
-        <p>
-            Stardom-Foundation has three core programs: </p>
-        <ul>
-            <li>Ferox deuss ducunt ad contencio.</li>
-            <li>Cauliflower combines greatly with old tuna.</li>
-            <li>Why does the starship warp.</li>
-        </ul>
-
-    </div>
+    <!--</div>-->
+<h1>Stardom Programs</h1>
 
 
     <div class="row medium-uncollapse large-collapse">
@@ -138,20 +73,15 @@
                 <p>
                     The pin rises malaria like a wet cockroach.
                 </p>
-                <p>
-                    The creature flies moon like a neutral spacecraft.
-                </p>
-                <p>
-                    Never emerge the believer, for you cannot experience it.
-                </p>
+
 
             </div>
         </div>
     </div>
 
-    <div class="row medium-uncollapse large-collapse">
-        <div class="small-6 columns second">
-            <div class="first">
+    <div id="tonnie" class="row medium-uncollapse flex-row large-collapse">
+        <div class="small-6 columns lind-second">
+            <div class="first limbo">
                 <p>
                     The pin rises malaria like a wet cockroach.
                 </p>
@@ -171,17 +101,17 @@
                 <p>
                     The creature flies moon like a neutral spacecraft.
                 </p>
-                <p>
-                    Never emerge the believer, for you cannot experience it.
-                </p>
+
 
             </div>
         </div>
-        <div class="small-6 columns third">
-            <div class="column">
+
+        <div class="small-6 columns lind-third">
+            <div class="column limbo">
                 <img src="img/bath.jpg" class="thumbnail" alt="">
             </div>
         </div>
+
     </div>
 
 
@@ -212,19 +142,16 @@
                 <p>
                     The creature flies moon like a neutral spacecraft.
                 </p>
-                <p>
-                    Never emerge the believer, for you cannot experience it.
-                </p>
+
 
             </div>
         </div>
     </div>
 
-
-    <!--    </div>-->
     <footer>
         <p>Copyright © 2016 </p>
     </footer>
+</div>
 
     <script src="js/vendor/jquery.js"></script>
     <script src="js/vendor/what-input.js"></script>
