edited and out footer on every page

--- a/events.html
+++ b/events.html
@@ -204,6 +204,36 @@
 
     </section>
 
+    <!--****************************************-->
+    <!--    Footer-->
+    <footer>
+        <div class="row contact">
+            <div class="light-pink small-12 large-3 columns">
+                <h5>WHERE ARE WE?</h5>
+                <p>We live in Melbourne,Australia.</p>
+                <p>Need to get in touch? Head over to the CONTACT page and send us a message.</p>
+            </div>
+            <div class="dark-pink small-12 large-5 columns">
+                <h5>ABOUT US</h5>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                <button><a href="./about.html">READ MORE</a></button>
+            </div>
+            <div class="dark-pink small-12 large-4 columns">
+                <h5>LET'S BE SOCIAL</h5>
+                <div>
+                    <i class="fa fa-facebook fa-2x" aria-hidden="true"></i>
+                    <i class="fa fa-twitter fa-2x" aria-hidden="true"></i>
+                    <i class="fa fa-google-plus fa-2x" aria-hidden="true"></i>
+                </div>
+
+            </div>
+        </div>
+        <div class="copy_right">
+            <p>Copyright © 2016 </p>
+        </div>
+    </footer>
+
+
 
     <script src="js/vendor/jquery.js"></script>
     <script src="js/vendor/what-input.js"></script>
