--- a/programs.html
+++ b/programs.html
@@ -22,31 +22,31 @@
 <body>
 
 
-<nav class="desk_nav top-navigation">
-    <ul>
-        <li>
-            <a href="#home"><img src="./img/pngone.png"></a>
-        </li>
-        <li style="float:right; padding-top:20px;"><a data-open="exampleModal1" class="active" href="#about">CONTACT</a></li>
-        <li style="float:right; margin-right:100px; padding-top:20px;"><a href="./programs.html">SUPPORT</a></li>
-        <li style="float:right; padding-right:20px; padding-top:20px;"><a href="./events.html">EVENTS</a></li>
-        <li style="float:right; padding-right:20px; padding-top:20px;"><a href="./about.html">ABOUT</a></li>
-        <li style="float:right; padding-right:20px; padding-top:20px;"><a href="#hero">HOME</a></li>
-    </ul>
-</nav>
+    <nav class="desk_nav top-navigation">
+        <ul>
+            <li>
+                <a href="#home"><img src="./img/pngone.png"></a>
+            </li>
+            <li style="float:right; padding-top:20px;"><a data-open="exampleModal1" class="active" href="#about">CONTACT</a></li>
+            <li style="float:right; margin-right:100px; padding-top:20px;"><a href="./programs.html">SUPPORT</a></li>
+            <li style="float:right; padding-right:20px; padding-top:20px;"><a href="./events.html">EVENTS</a></li>
+            <li style="float:right; padding-right:20px; padding-top:20px;"><a href="./about.html">ABOUT</a></li>
+            <li style="float:right; padding-right:20px; padding-top:20px;"><a href="#hero">HOME</a></li>
+        </ul>
+    </nav>
 
     <!--<div class="column row wrapper heading">-->
-        <!--<p>-->
-            <!--Stardom-Foundation has three core programs:-->
+    <!--<p>-->
+    <!--Stardom-Foundation has three core programs:-->
 
-            <!--<ul>-->
-                <!--<li>Ferox deuss ducunt ad contencio.</li>-->
-                <!--<li>Cauliflower combines greatly with old tuna.</li>-->
-                <!--<li>Why does the starship warp.</li>-->
-            <!--</ul>-->
+    <!--<ul>-->
+    <!--<li>Ferox deuss ducunt ad contencio.</li>-->
+    <!--<li>Cauliflower combines greatly with old tuna.</li>-->
+    <!--<li>Why does the starship warp.</li>-->
+    <!--</ul>-->
 
     <!--</div>-->
-<h1>Stardom Programs</h1>
+    <h1>Stardom Programs</h1>
 
 
     <div class="row medium-uncollapse large-collapse">
@@ -148,10 +148,37 @@
         </div>
     </div>
 
+
+
+    <!--****************************************-->
+    <!--    Footer-->
     <footer>
-        <p>Copyright © 2016 </p>
+        <div class="row contact">
+            <div class="light-pink small-12 large-3 columns">
+                <h5>WHERE ARE WE?</h5>
+                <p>We live in Melbourne,Australia.</p>
+                <p>Need to get in touch? Head over to the CONTACT page and send us a message.</p>
+            </div>
+            <div class="dark-pink small-12 large-5 columns">
+                <h5>ABOUT US</h5>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                <button><a href="./about.html">READ MORE</a></button>
+            </div>
+            <div class="dark-pink small-12 large-4 columns">
+                <h5>LET'S BE SOCIAL</h5>
+                <div>
+                    <i class="fa fa-facebook fa-2x" aria-hidden="true"></i>
+                    <i class="fa fa-twitter fa-2x" aria-hidden="true"></i>
+                    <i class="fa fa-google-plus fa-2x" aria-hidden="true"></i>
+                </div>
+
+            </div>
+        </div>
+        <div class="copy_right">
+            <p>Copyright © 2016 </p>
+        </div>
     </footer>
-</div>
+
 
     <script src="js/vendor/jquery.js"></script>
     <script src="js/vendor/what-input.js"></script>
