linked home in programs and index

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <!--    End of Nav Bar-->
 
 
-    <section class="hero">
+    <section id="hero" class="hero">
         <div class="parallax-window" data-parallax="scroll" data-image-src="./img/overlay-pic.png">
             <p>WE ARE TRANSFORMING THE LIVES OF YOUNG LADIES ALL OVER AFRICA</p>
         </div>
